--- a/ExtraRundownCustomization/Properties.props
+++ b/ExtraRundownCustomization/Properties.props
@@ -39,6 +39,7 @@
 	<!-- Plugin Dependencies -->
 	<ItemGroup>
 		<Reference Include="$(PluginsFolder)\dakkhuza-MTFO\MTFO.dll" Private="false" />
+		<Reference Include="$(PluginsFolder)\Inas07-LocalProgression\Inas07.LocalProgression.dll" Private="false" />
 	</ItemGroup>
 	
 	<!-- NuGet Packages -->
